20240218 New Commit PHP&Javascript portfolio.
20240218 New Commit PHP&Javascript portfolio.
New Commit.

--- a/CreateWork(2024)/index.html
+++ b/CreateWork(2024)/index.html
@@ -8,6 +8,10 @@
     <h1>ようこそ！私のポートフォリオへ！</h1>
     <a href="./jquery/index.html">Jqueryのスライド作成(2024/01/28(日) - 13:22 - 作成)</a>
     <br/>
-    <a href="./CreateWork(2024)/juice.html">ジュースの自販機APP作成(2024/01/31(水) - 19:41 - 作成)</a>
+    <a href="./CreateWork(2024)/Juice/juice.html">ジュースの自販機APP作成(2024/01/31(水) - 19:41 - 作成)</a>
+    <br/>
+    <a href="./CreateWork(2024)/BookManagement/Navigator.php">書籍管理アプリ(2024/02/18(日) - 11:05 - 作成)</a>
+    <br/>
+    <a href="./CreateWork(2024)/BMICalc/BMICalc.html">BMI計算アプリ(2024/02/18(日) - 13:08 - 作成)</a>
   </body>
 </html>
